Fix the dashboard purchase card layout on mobile

--- a/static/css/admin-dashboard/main.scss
+++ b/static/css/admin-dashboard/main.scss
@@ -138,7 +138,6 @@ h1 {
   .parameters {
     display: flex;
     align-self: flex-start;
-    justify-content: flex-end;
 
     .color {
       border-radius: 50%;
@@ -252,8 +251,26 @@ h1 {
 @supports (display: grid) {
   .purchases .product-info {
     display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
+    align-items: center;
+
+    .title {
+      grid-column: 1 / 3;
+    }
+
+    .purchaser {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4;
+    }
+
+    .parameters {
+      grid-row: 2 / 3;
+      grid-column: 1 / 2;
+    }
+
+    .parameters, time {
+      margin-bottom: .5em;
+    }
   }
 }
 
@@ -262,8 +279,24 @@ h1 {
     display: block;
   }
 
-  .see-profile {
-    @supports (display: grid) {
+  @supports (display: grid) {
+    .purchases .product-info {
+      grid-template-columns: 1fr auto;
+      grid-template-rows: auto auto;
+
+      .title, .purchaser {
+        grid-column: 1 / 2;
+        grid-row: auto;
+      }
+
+      .parameters {
+        justify-content: flex-end;
+        grid-row: auto;
+        grid-column: auto;
+      }
+    }
+
+    .see-profile {
       display: grid;
       grid-template-columns: 1fr auto;
       grid-template-rows: auto auto;
